horizontal scrollbar disabled, vertical scrolling added

--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SeriesSelector"
         mc:Ignorable="d"
-        Title="SeriesPicker by Tom" Height="800" Width="1200" >
+        Title="SeriesSelector by Tom" Height="800" Width="1200" >
 
     <Window.Background>
         <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -16,22 +16,25 @@
         </LinearGradientBrush>
     </Window.Background>
 
-    <StackPanel Orientation="Vertical">
-        <Grid>
-            <Label Content="Select a Series to play" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24 pt" Margin="0,0,0,20" FontWeight="Heavy"/>
-            <Button Content="+" Click="AddSeries" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Width="30" Height="30" Background="Black" Foreground="White" />
-        </Grid>
-        <ListView Name="ListView"  ItemsSource="{Binding SeriesList}" HorizontalAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Button Name="DecBtn" Content="&lt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick"/>
-                        <Button Name="PlayBtn" Content="{Binding SeriesNameAsString}" VerticalAlignment="Center" Width="150" Height="75" Margin="10,10" FontWeight="Bold" FontSize="16pt" Background="{Binding GetAColorBrush}" Click="PlayBtn_OnClick"/>
-                        <Button Name="IncBtn" Content="&gt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick"/>
-                        <Label Name = "Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" Margin="10,0" FontSize="28pt"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" PreviewMouseWheel="ScrollerinoHandler">
+        <StackPanel Orientation="Vertical">
+            <Grid>
+                <Label Content="Select a Series to play" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24 pt" Margin="0,0,0,20" FontWeight="Heavy"/>
+                <Button Content="+" Click="AddSeries" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Width="30" Height="30" Background="Black" Foreground="White" />
+            </Grid>
+            <ListView Name="ListView"  ItemsSource="{Binding SeriesList}" HorizontalAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Name="DecBtn" Content="&lt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick"/>
+                            <Button Name="PlayBtn" Content="{Binding SeriesNameAsString}" VerticalAlignment="Center" Width="150" Height="75" Margin="10,10" FontWeight="Bold" FontSize="16pt" Background="{Binding GetAColorBrush}" Click="PlayBtn_OnClick"/>
+                            <Button Name="IncBtn" Content="&gt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick"/>
+                            <Label Name = "Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" Margin="10,0" FontSize="28pt"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
