--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -18,10 +18,13 @@
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" PreviewMouseWheel="ScrollerinoHandler">
         <StackPanel Orientation="Vertical">
-            <Grid>
-                <Label Content="Select a Series to play" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24 pt" Margin="0,0,0,20" FontWeight="Heavy"/>
-                <Button Content="+" Click="AddSeries" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Width="30" Height="30" Background="Black" Foreground="White" />
-            </Grid>
+            <DockPanel>
+                <Label Content="Select a Series to play" DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="24 pt" Margin="10" FontWeight="Heavy"/>
+                <Button Content="+" Click="AddSeries" DockPanel.Dock="Right" VerticalContentAlignment="Center" Margin="20" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Button Content="?" Click="ShowHelp" DockPanel.Dock="Right" VerticalAlignment="Center" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Button Content="$" Click="Donate" DockPanel.Dock="Right" VerticalAlignment="Center" Margin ="20" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Label></Label>
+            </DockPanel>
             <ListView Name="ListView"  ItemsSource="{Binding SeriesList}" HorizontalAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListView.ItemTemplate>
