--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -20,10 +20,11 @@
         <StackPanel Orientation="Vertical">
             <DockPanel>
                 <Label Content="Select a Series to play" DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="24 pt" Margin="10" FontWeight="Heavy"/>
-                <Button Content="+" Click="AddSeries" DockPanel.Dock="Right" VerticalContentAlignment="Center" Margin="20" Width="30" Height="30" Background="Black" Foreground="White" />
-                <Button Content="?" Click="ShowHelp" DockPanel.Dock="Right" VerticalAlignment="Center" Width="30" Height="30" Background="Black" Foreground="White" />
-                <Button Content="$" Click="Donate" DockPanel.Dock="Right" VerticalAlignment="Center" Margin ="20" Width="30" Height="30" Background="Black" Foreground="White" />
-                <Label></Label>
+                <Button Content="+" Click="AddSeries" DockPanel.Dock="Right" VerticalContentAlignment="Center" Margin="10 20 20 20" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Button Content="?" Click="ShowHelp" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10 20" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Button Content="$" Click="Donate" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10 20" Width="30" Height="30" Background="Black" Foreground="White" />
+                <Label Content="{Binding Time}" DockPanel.Dock="Right" VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5" FontWeight="ExtraBold"/>
+<Label></Label>
             </DockPanel>
             <ListView Name="ListView"  ItemsSource="{Binding SeriesList}" HorizontalAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled">
