--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -18,26 +18,29 @@
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" PreviewMouseWheel="ScrollerinoHandler">
         <StackPanel Orientation="Vertical">
-            <DockPanel>
+            <DockPanel LastChildFill="True">
                 <Label Content="Select a Series to play" DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="24 pt" Margin="10" FontWeight="Heavy" Foreground="AliceBlue" />
                 <Button Content="+" Click="AddSeries" DockPanel.Dock="Right" VerticalContentAlignment="Center" Margin="10 20 20 20" Width="30" Height="30" Background="Black" Foreground="AliceBlue" />
                 <Button Content="?" Click="ShowHelp" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10 20" Width="30" Height="30" Background="Black" Foreground="AliceBlue" />
                 <Button Content="$" Click="Donate" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10 20" Width="30" Height="30" Background="Black" Foreground="AliceBlue" />
                 <Label Content="{Binding Time}" DockPanel.Dock="Right" VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5" FontWeight="ExtraBold" Foreground="AliceBlue" />
-<Label></Label>
+                <Label></Label>
             </DockPanel>
-            <ListView Name="ListView"  ItemsSource="{Binding SeriesList}" HorizontalAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown"
+
+            <ListView Name="ListView" ItemsSource="{Binding SeriesList}" HorizontalContentAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" KeyDown="ListView_OnKeyDown"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Button Name="DecBtn" Content="&lt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick" />
-                            <Button Name="PlayBtn" VerticalAlignment="Center" Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt" Background="{Binding GetBGColorBrush}" Foreground="{Binding GetFGColorBrush}" Click="PlayBtn_OnClick">
+                            <DockPanel HorizontalAlignment="Stretch" LastChildFill="True">
+                            <Button DockPanel.Dock="Left" Name="DecBtn" Content="&lt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick" />
+                            <Button DockPanel.Dock="Left" Name="PlayBtn" VerticalAlignment="Center" Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt" Background="{Binding GetBGColorBrush}" Foreground="{Binding GetFGColorBrush}" Click="PlayBtn_OnClick">
                                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}"/>
                             </Button>
-                            <Button Name="IncBtn" Content="&gt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
-                            <Label Name = "Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
-                        </StackPanel>
+                            <Button DockPanel.Dock="Left" Name="IncBtn" Content="&gt;" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
+                            <Button DockPanel.Dock="Right" Name="DeleteBtn" Content="X" Background="Black" Foreground="AliceBlue" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0" Width="20"  Click="RemoveHandler"/>
+                            <Button DockPanel.Dock="Right" Name="FindBtn" Content="E" Background="Black" Foreground="AliceBlue" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" Width="20"  Click="FindHandler" />
+                            <Label  DockPanel.Dock="Left"   Name="Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
+                        </DockPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
