Button Color is derived via Converter, not in series Class

--- a/SeriesSelector/Converters.xaml
+++ b/SeriesSelector/Converters.xaml
@@ -4,6 +4,8 @@
 
 
     <local:ProgressToVisibilityConverter x:Key="MyProgressToVisibilityConverter" />
+    <local:StringToBrushConverterBG x:Key="PlayBtnBG" />
+    <local:StringToBrushConverterFG x:Key="PlayBtnFG" />
 
 
 </ResourceDictionary>
