--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -34,13 +34,13 @@
                 <Button Content="?" Style="{StaticResource TopLayerButton}" Click="ShowHelp" DockPanel.Dock="Right"  />
                 <Button Content="$" Style="{StaticResource TopLayerButton}" Click="Donate" DockPanel.Dock="Right" />
                 <Label Content="{Binding Time}" DockPanel.Dock="Right" VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5" FontWeight="ExtraBold" Foreground="AliceBlue" />
-                <ProgressBar Name="PB" Minimum="0" Maximum="100" Value="{Binding Progress}" Visibility="{Binding Progress, Converter={StaticResource MyProgressToVisibilityConverter}}"  Margin="30" Foreground="MidnightBlue">
-                    <ProgressBar.Background>
+                <ProgressBar Name="PB" Minimum="0" Maximum="100" Value="{Binding Progress}" Visibility="{Binding Progress, Converter={StaticResource MyProgressToVisibilityConverter}}" Margin="30" Background="AliceBlue">
+                    <ProgressBar.Foreground>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="LightBlue" Offset="0" />
                             <GradientStop Color="MidnightBlue" Offset="1" />
                         </LinearGradientBrush>
-                    </ProgressBar.Background>
+                    </ProgressBar.Foreground>
 
                 </ProgressBar>
             </DockPanel>
@@ -51,7 +51,10 @@
                     <DataTemplate>
                         <DockPanel HorizontalAlignment="Stretch" LastChildFill="True">
                             <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="DecBtn" Content="&lt;" Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick" />
-                            <Button DockPanel.Dock="Left" Name="PlayBtn" VerticalAlignment="Center" Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt" Background="{Binding GetBGColorBrush}" Foreground="{Binding GetFGColorBrush}" Click="PlayBtn_OnClick">
+                            <Button DockPanel.Dock="Left" Name="PlayBtn" VerticalAlignment="Center" Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt"
+                                    Background="{Binding SeriesNameAsString, Converter={StaticResource PlayBtnBG}}"
+                                    Foreground="{Binding SeriesNameAsString, Converter={StaticResource PlayBtnFG}}"
+                                    Click="PlayBtn_OnClick">
                                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}"/>
                             </Button>
                             <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="IncBtn" Content="&gt;" Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
