--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -41,7 +41,6 @@
                             <GradientStop Color="MidnightBlue" Offset="1" />
                         </LinearGradientBrush>
                     </ProgressBar.Foreground>
-
                 </ProgressBar>
             </DockPanel>
 
@@ -58,8 +57,8 @@
                                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}"/>
                             </Button>
                             <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="IncBtn" Content="&gt;" Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SmallButton}" Name="DeleteBtn" Content="X" Click="RemoveHandler" Margin="5 10 10 10"/>
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SmallButton}" Name="FindBtn" Content="E"  Click="FindHandler" />
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="DeleteBtn" Content="X" Click="RemoveHandler" Margin="5 10 10 10"/>
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="FindBtn" Content="E"  Click="FindHandler" />
                             <Label  DockPanel.Dock="Left"  Name="Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
                         </DockPanel>
                     </DataTemplate>
