--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -30,9 +30,9 @@
         <StackPanel Orientation="Vertical">
             <DockPanel LastChildFill="True">
                 <Label Content="Select a Series to play" DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="24 pt" Margin="10" FontWeight="Heavy" Foreground="AliceBlue" />
-                <Button Content="+" Style="{StaticResource TopLayerButton}" Click="AddSeries" DockPanel.Dock="Right" Margin="10 20 15 20"/>
-                <Button Content="?" Style="{StaticResource TopLayerButton}" Click="ShowHelp" DockPanel.Dock="Right"  />
-                <Button Content="$" Style="{StaticResource TopLayerButton}" Click="Donate" DockPanel.Dock="Right" />
+                <Button Content="+" Style="{StaticResource TopLayerButton}" Click="PlusBtn_OnClick" DockPanel.Dock="Right" Margin="10 20 15 20"/>
+                <Button Content="?" Style="{StaticResource TopLayerButton}" Click="HelpBtn_OnClick" DockPanel.Dock="Right"  />
+                <Button Content="$" Style="{StaticResource TopLayerButton}" Click="DollarBtn_OnClick" DockPanel.Dock="Right" />
                 <Label Content="{Binding Time}" DockPanel.Dock="Right" VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5" FontWeight="ExtraBold" Foreground="AliceBlue" />
                 <ProgressBar Name="PB" Minimum="0" Maximum="100" Value="{Binding Progress}" Visibility="{Binding Progress, Converter={StaticResource MyProgressToVisibilityConverter}}" Margin="30" Background="AliceBlue">
                     <ProgressBar.Foreground>
@@ -57,8 +57,8 @@
                                 <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}"/>
                             </Button>
                             <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="IncBtn" Content="&gt;" Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="DeleteBtn" Content="X" Click="RemoveHandler" Margin="5 10 10 10"/>
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="FindBtn" Content="E"  Click="FindHandler" />
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="DeleteBtn" Content="X" Click="XBtn_OnClick" Margin="5 10 10 10"/>
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="FindBtn" Content="E"  Click="EBtn_OnClick" />
                             <Label  DockPanel.Dock="Left"  Name="Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
                         </DockPanel>
                     </DataTemplate>
