--- a/SeriesSelector/MainWindow.xaml
+++ b/SeriesSelector/MainWindow.xaml
@@ -16,7 +16,6 @@
         </ResourceDictionary>
     </Window.Resources>
 
-
     <Window.Background>
         <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
             <LinearGradientBrush.GradientStops>
@@ -29,12 +28,21 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto" PreviewMouseWheel="ScrollerinoHandler">
         <StackPanel Orientation="Vertical">
             <DockPanel LastChildFill="True">
-                <Label Content="Select a Series to play" DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="24 pt" Margin="10" FontWeight="Heavy" Foreground="AliceBlue" />
-                <Button Content="+" Style="{StaticResource TopLayerButton}" Click="PlusBtn_OnClick" DockPanel.Dock="Right" Margin="10 20 15 20"/>
-                <Button Content="?" Style="{StaticResource TopLayerButton}" Click="HelpBtn_OnClick" DockPanel.Dock="Right"  />
-                <Button Content="$" Style="{StaticResource TopLayerButton}" Click="DollarBtn_OnClick" DockPanel.Dock="Right" />
-                <Label Content="{Binding Time}" DockPanel.Dock="Right" VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5" FontWeight="ExtraBold" Foreground="AliceBlue" />
-                <ProgressBar Name="PB" Minimum="0" Maximum="100" Value="{Binding Progress}" Visibility="{Binding Progress, Converter={StaticResource MyProgressToVisibilityConverter}}" Margin="30" Background="AliceBlue">
+                <Label Content="Select a Series to play" DockPanel.Dock="Left"
+                       VerticalAlignment="Center" FontSize="24 pt" Margin="10"
+                       FontWeight="Heavy" Foreground="AliceBlue" />
+                <Button Content="+" Style="{StaticResource TopLayerButton}"
+                        Click="PlusBtn_OnClick" DockPanel.Dock="Right" Margin="10 20 15 20" />
+                <Button Content="?" Style="{StaticResource TopLayerButton}"
+                        Click="HelpBtn_OnClick" DockPanel.Dock="Right" />
+                <Button Content="$" Style="{StaticResource TopLayerButton}"
+                        Click="DollarBtn_OnClick" DockPanel.Dock="Right" />
+                <Label Content="{Binding Time}" DockPanel.Dock="Right"
+                       VerticalAlignment="Center" FontSize="24 pt" Margin="0 0 10 5"
+                       FontWeight="ExtraBold" Foreground="AliceBlue" />
+                <ProgressBar Name="PB" Minimum="0" Maximum="100" Value="{Binding Progress}"
+                             Visibility="{Binding Progress, Converter={StaticResource MyProgressToVisibilityConverter}}"
+                             Margin="30" Background="AliceBlue">
                     <ProgressBar.Foreground>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="LightBlue" Offset="0" />
@@ -44,22 +52,34 @@
                 </ProgressBar>
             </DockPanel>
 
-            <ListView Name="ListView" ItemsSource="{Binding SeriesList}" HorizontalContentAlignment="Stretch" Background="Transparent" BorderBrush="Transparent" PreviewKeyDown="ListView_OnKeyDown"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListView Name="ListView" ItemsSource="{Binding SeriesList}" HorizontalContentAlignment="Stretch"
+                      Background="Transparent" BorderBrush="Transparent" PreviewKeyDown="ListView_OnKeyDown"
+                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <DockPanel HorizontalAlignment="Stretch" LastChildFill="True">
-                            <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="DecBtn" Content="&lt;" Click="DecBtn_OnClick" MouseRightButtonDown="DecBtn_OnRightClick" />
-                            <Button DockPanel.Dock="Left" Name="PlayBtn" VerticalAlignment="Center" Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt"
+                            <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}"
+                                    Name="DecBtn" Content="&lt;" Click="DecBtn_OnClick"
+                                    MouseRightButtonDown="DecBtn_OnRightClick" />
+                            <Button DockPanel.Dock="Left" Name="PlayBtn" VerticalAlignment="Center"
+                                    Width="150" Height="65" Margin="10,10" FontWeight="Bold" FontSize="16pt"
                                     Background="{Binding SeriesNameAsString, Converter={StaticResource PlayBtnBG}}"
                                     Foreground="{Binding SeriesNameAsString, Converter={StaticResource PlayBtnFG}}"
                                     Click="PlayBtn_OnClick">
-                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}"/>
+                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding SeriesNameAsString}" />
                             </Button>
-                            <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}" Name="IncBtn" Content="&gt;" Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="DeleteBtn" Content="X" Click="XBtn_OnClick" Margin="5 10 10 10"/>
-                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}" Name="FindBtn" Content="E"  Click="EBtn_OnClick" />
-                            <Label  DockPanel.Dock="Left"  Name="Label" Content="{Binding CurrentEpisodeAsString}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
+                            <Button DockPanel.Dock="Left" Style="{StaticResource SmallButton}"
+                                    Name="IncBtn" Content="&gt;"
+                                    Click="IncBtn_OnClick" MouseRightButtonDown="IncBtn_OnRightClick" />
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}"
+                                    Name="DeleteBtn" Content="X" Margin="5 10 10 10"
+                                    Click="XBtn_OnClick" />
+                            <Button DockPanel.Dock="Right" Style="{StaticResource SideButton}"
+                                    Name="FindBtn" Content="E"
+                                    Click="EBtn_OnClick" />
+                            <Label  DockPanel.Dock="Left"  Name="Label" Content="{Binding CurrentEpisodeAsString}"
+                                    VerticalAlignment="Center" HorizontalAlignment="Stretch"
+                                    Margin="10,0" FontSize="28pt" Foreground="AliceBlue" />
                         </DockPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
